# africa-usa-trade-intelligence

./: .dockerignore  .env.example  .gitignore  ADVANCED_MCP_AUTOMATION.md  AFFILIATE_MARKETING_NEXT_STEPS.md  ARCHITECTURE_ENHANCEMENT.md  AUTOMATED_DATA_TRACKING.md  BRANCH_PROTECTION_GUIDE.md  CENSUS_API_INTEGRATION_GUIDE.md  CLEAN_ARCHITECTURE.md  CLEAN_ARCHITECTURE_IMPLEMENTATION.md  CODE_REVIEW_AGENT.md  CONFIG_PACK_SUMMARY.md  CONTINUOUS_DEVELOPMENT.md  DAILY_WORKFLOW_SYSTEM.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  Dockerfile.market_intelligence  ENHANCED_FEATURES_DOCUMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FREE_WORLD_TRADE_CURRENT_CAPABILITIES.md  FREE_WORLD_TRADE_STRATEGY_PRESENTATION.txt  GITHUB_MCP_INTEGRATION.md  GLOBAL_DOMINANCE_STRATEGY.md  IMPLEMENTATION_GUIDE.md  LINKEDIN_API_READY.md  LINKEDIN_APP_SETUP.md  LINKEDIN_AUTH_TROUBLESHOOTING.md  LINKEDIN_COMPLETE_SOLUTION.md  LINKEDIN_CONFIGURATION_COMPLETE_GUIDE.md  LINKEDIN_CONTENT_CALENDAR.md  LINKEDIN_CONTENT_STRATEGY.md  LINKEDIN_CURRENT_STATUS.md  LINKEDIN_OAUTH_MANUAL_GUIDE.md  LINKEDIN_SCOPES_SOLUTION.md  LINKEDIN_SCOPES_WORKAROUND.md  MCP_BUYER_FUNNEL_USER_GUIDE.md  (+34 more)
.github/: copilot-instructions.md
.streamlit/: config.toml
data/: scheduled_task_setup.txt
docs/: DEPLOYMENT.md
migrations/: env.py
scripts/: automated_data_tracker.py  backup_database.py  check_linkedin_env.py  check_linkedin_setup.py  configure_branch_protection.py  create_buyer_funnel.py  create_buyer_funnel_simple.py  exchange_code_for_token.py  generate_auth_url.py  generate_manual_token.py  get_linkedin_token_simple.py  implementation_summary.py  init_data_collection.py  init_production_db.py  linkedin_callback_server.py  mcp_python_client.py  mcp_tool_runner.py  monitor_linkedin_status.py  run_free_api_tests.py  run_linkedin_oauth.py  run_migrations.py  scheduled_data_collection.py  set_linkedin_token.ps1  setup_uptime_robot.py  simple_api_test.py  test_all_mcp_servers.py  test_census_api.py  test_dashboard_api.py  test_linkedin_api.py  test_linkedin_client_credentials.py  test_mcp_connection.py  test_mcp_connection_with_logging.py  test_path_fixes.py  test_simple_post.py  update_env_token.py  update_linkedin_credentials.py  validate_free_apis.py  validate_workflows.py  verify_deployment.py  verify_linkedin_credentials.py
src/: main.py  requirements.txt  scheduler.py  test_imports.py  test_modules.py  test_platform.py
src_clean/: README.md  config.py  requirements.txt
(+82 files in other folders)
