[tool.ruff]
# Minimal ruff configuration used by CI
line-length = 88
extend-ignore = ["E203", "W503"]
select = ["E", "F", "W", "C90"]
exclude = [".git", "venv", "dist", "build", "__pycache__", "data"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
