[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ausa-trade-intelligence"
version = "0.1.0"
description = "Africa-USA Trade Intelligence Platform"
dynamic = ["readme", "requires-python", "authors", "classifiers", "dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["api", "config", "dashboard", "data", "data.jobs", "health", "intelligence", "mcp", "mcp_servers", "monitoring"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[project.scripts]
trade-dashboard = "dashboard.app:main"
ingest-census = "data.jobs.ingestion_census:main"
ingest-fred = "data.jobs.ingestion_fred:main"
ingest-wb = "data.jobs.ingestion_wb:main"
refresh-arbitrage = "data.jobs.refresh_arbitrage:main"
fx-rates = "data.jobs.fx_rates:main"

[tool.ruff]
# Minimal ruff configuration used by CI
line-length = 88
extend-ignore = ["E203", "W503"]
select = ["E", "F", "W", "C90"]
exclude = [".git", "venv", "dist", "build", "__pycache__", "data"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]